<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--
         Used in Action Bar, and in AndroidManifest to tell the device the name of this app.
    -->
    <string name="app_name">TwitMix</string>

    <!--
         By convention, "action" denotes that this String will be used as the label for an Action,
         typically from the action bar.  The ActionBar is limited real estate, so shorter is better.
    -->
    <string name="action_settings">Settings</string>
    <string name="action_map">Map Location</string>
    <string name="action_share">Share</string>

    <!-- Menu label to fetch updated data info from the server -->
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>


    <!-- Label for the category units preference [CHAR LIMIT=30] -->
    <string name="pref_category_label">Category</string>

    <!-- Label for category option in category unit preference [CHAR LIMIT=25] -->
    <string name="pref_category_label_news">News</string>

    <!-- Label for category option in category unit preference [CHAR LIMIT=25] -->
    <string name="pref_category_label_interviews">Interviste</string>

    <string name="pref_category_label_concerts">Concerti</string>

    <!-- Key name for category preference in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_category_key" translatable="true">category</string>

    <!-- Value in SharedPreferences for category unit option [CHAR LIMIT=NONE] -->
    <string name="pref_category_news" translatable="true">news</string>

    <!-- Value in SharedPreferences for category option [CHAR LIMIT=NONE] -->
    <string name="pref_category_interviews" translatable="true">interviste</string>

    <string name="pref_category_concerts" translatable="true">concerti-live</string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type">twitmix.example.com</string>
    <string name="content_authority">com.example.android.twitmix.app</string>

    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>

    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Twitmix Notifications</string>

    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

</resources>
