<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListPreference
        android:title="@string/pref_category_label"
        android:key="@string/pref_category_key"
        android:defaultValue="@string/pref_category_news"
        android:entryValues="@array/pref_category_values"
        android:entries="@array/pref_category_options" />

    <CheckBoxPreference
    android:title="@string/pref_enable_notifications_label"
    android:key="@string/pref_enable_notifications_key"
    android:summaryOff="@string/pref_enable_notifications_false"
    android:summaryOn="@string/pref_enable_notifications_true"
    android:defaultValue="@string/pref_enable_notifications_default" />

</PreferenceScreen>
